Fixed elevation and z-index of the toolbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 @import '~_variables.scss';
+@import '~@angular/material/theming';
 
 mat-toolbar {
 
@@ -6,6 +7,7 @@ mat-toolbar {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 2;
 
   -webkit-user-select: none;
 
